CSS設定（途中経過）

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             </ul>
         </nav>
     </header>
-    <img src="image/eat.jpg" alt="食べ物の写真">
-    <div>
+    <article>
+    <img class="eat" src="image/eat.jpg" alt="食べ物の写真">
+    <div class=catch>
         <h1>近くのお店に配達を注文</h1>
         <form>
             <ul>
@@ -27,49 +28,60 @@
             </ul>
         </form>
     </div>
+    </article>
     <article>
         <dl>
-            <img src="" alt="">
-            <dt></dt>
-            <dd></dd>
-            <img src="" alt="">
-            <dt></dt>
-            <dd></dd>
-            <img src="" alt="">
-            <dt></dt>
-            <dd></dd>
+            <div>
+                <img src="image/disk.jpg" alt="机の画像">
+                <dt>従業員に食事を提供</dt>
+                <dd>ビジネス用アカウントを作成する</dd>
+            </div>
+            <div>
+                <img src="image/cook.jpg" alt="料理の画像">
+                <dt>レストランの料理をお客様へお届け</dt>
+                <dd>加盟レストランとして登録する</dd>
+            </div>
+            <div>
+                <img src="image/bike.jpg" alt="自転車の画像">
+                <dt>Uber Eatで配達する</dt>
+                <dd>配達パートナーとして登録する</dd>
+            </div>
         </dl>
     </article>
-    <article>
+    <article class="kuni">
         <h1>Uber-Eatが利用できるところ</h1>
-        <map name=""></map>
-        <table>
-            <td>東京</td>
-            <td>埼玉</td>
-            <td>千葉</td>
-            <td>茨城</td>
-            <td>神奈川</td>
-            <td>群馬</td>
-            <td>栃木</td>
-            <td>愛媛</td>
-            <td>京都</td>
-            <td>大阪</td>
-            <td>福岡</td>
-            <td>岡山</td>
-        </table>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27255158.220506288!2d137.15386460000002!3d33.500188599999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34674e0fd77f192f%3A0xf54275d47c665244!2z5pel5pys!5e0!3m2!1sja!2sjp!4v1709210941687!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <ul class="ken">
+            <li>埼玉</li>
+            <li>千葉</li>
+            <li>神奈川</li>
+            <li>群馬</li>
+            <li>栃木</li>
+            <li>東京</li>
+            <li>愛媛</li>
+            <li>福岡</li>
+            <li>鹿児島</li>
+            <li>石川</li>
+            <li>北海道</li>
+            <li>青森</li>
+            <li>秋田</li>
+            <li>宮城</li>
+            <li>鹿児島</li>
+            <li>福岡</li>
+        </ul>
     </article>
-    <article>
-        <h1>Uber Eat</h1>
-        <p>App Store</p>
-        <p>Google Play</p>
-        <ul>
+    <article class="look">
+        <div>
+            <h1>Uber Eat</h1>
+            <p>App Store</p>
+            <p>Google Play</p>
+        </div>
+        <ul class="click">
             <li>問い合わせる</li>
             <li>加盟レストランとして登録</li>
             <li>配達パートナーとして登録</li>
             <li>ビジネス用アカウントを作成する</li>
             <li>プロモーション</li>
-        </ul>
-        <ul>
             <li>近くのレストラン</li>
             <li>全ての都道府県を表示</li>
             <li>お近くでピックアップ</li>
@@ -79,9 +91,9 @@
     </article>
     <footer>
         <div>
-        <p>facebook</p>
-        <p>twitter</p>
-        <p>instergram</p>
+            <p>facebook</p>
+            <p>twitter</p>
+            <p>instergram</p>
         </div>
             <nav>
                 <ul>
@@ -95,8 +107,6 @@
             <p>このサイトはgoogleによって保護されており、プライバシーポリシー及び利用規約が適用されます。</p>
             <p>copy&; 2024 Uber iiiiiiiiiiii</p>
         </div>
-    </footer>
-    
-    
+    </footer> 
 </body>
 </html>
