レスポンシブデザイン設定

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/21465231b5.js" crossorigin="anonymous"></script>
     <title>Uber-Eat</title>
 </head>
 <body>
     <header>
-        <h1>Uber Eat</h1>
+        <h1><i class="fa-solid fa-bars"></i>Uber Eat</h1>
         <nav>
             <ul>
                 <li><label><button type="submit">ログイン</button></label</li>
@@ -16,7 +17,7 @@
             </ul>
         </nav>
     </header>
-    <article>
+    <article class="food">
     <img class="eat" src="image/eat.jpg" alt="食べ物の写真">
     <div class=catch>
         <h1>近くのお店に配達を注文</h1>
@@ -73,8 +74,8 @@
     <article class="look">
         <div>
             <h1>Uber Eat</h1>
-            <p>App Store</p>
-            <p>Google Play</p>
+            <p><i class="fa-brands fa-apple"></i></p>
+            <p><i class="fa-brands fa-google-pay"></i></p>
         </div>
         <ul class="click">
             <li>問い合わせる</li>
@@ -90,11 +91,12 @@
         </ul>
     </article>
     <footer>
-        <div>
-            <p>facebook</p>
-            <p>twitter</p>
-            <p>instergram</p>
+        <div class="icons">
+            <p><i class="fa-brands fa-facebook"></i></p>
+            <p><i class="fa-brands fa-twitter"></i></p>
+            <p><i class="fa-brands fa-instagram"></i></p>
         </div>
+        <div>
             <nav>
                 <ul>
                     <li>個人情報保護方針</li>
@@ -103,7 +105,6 @@
                     <li>個人情報または共有を許可しない</li>
                 </ul>
             </nav>
-        <div>
             <p>このサイトはgoogleによって保護されており、プライバシーポリシー及び利用規約が適用されます。</p>
             <p>copy&; 2024 Uber iiiiiiiiiiii</p>
         </div>
