リンク以外完成

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <h1>近くのお店に配達を注文</h1>
         <form>
             <ul>
-                <li><label><input type="text" placeholder="お届け先の住所を入力してください"></label></li>
-                <li><label><input type="text"></label></li>
-                <li><button type="submit">フードを探す</button></li>
+                <li><label><input type="text" class="seach" placeholder="お届け先の住所を入力してください"></label></li>
+                <li><label><input type="text" class="seach"></label></li>
+                <li><button type="submit" class="seach">フードを探す</button></li>
             </ul>
         </form>
     </div>
