レスポンシブ適応（再）

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </section>
         <section class="s3">
             <div class="s3-container">
-                <div class="s3-contant1">
+                <div class="s3-content1">
                     <h1>Uber Eat</h1>
                     <div>
                         <img src="image/App_log.png" alt="Appleストアのロゴ">
